# terraform-bin

./: .pre-commit-hooks.yaml  README.md  setup.cfg  setup.py  terraform-fmt.sh  tox.ini
terraform_bin/: fmt.py
