[metadata]
name = terraform-bin
description = Python wrapper around invoking terraform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yuvipanda/terraform-bin
author = Yuvi Panda
author_email = yuvipanda@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.7
